# ProjectsAlone

./: README.md
FifaBot/: bot.py
Nodejs Server/: package.json  tsconfig.json  typescript project.rar
Nodejs Server/src/config/: config.ts
Nodejs Server/src/types/: item.ts
biu/C assigments/Computer Organization/ex5_files/: CMakeLists.txt  showBMP
biu/CPP Reversie(Y2)/ass3/: info.txt  logs
biu/Cyber/ex1/: ReadME  skip.c  skip.txt
biu/Project/: occupancy.py
biu/Project/more code/: SvmReg demonstration - try 3 final.py
biu/Year2/Computer Organization/: CMakeLists.txt
biu/Year2/Reversie - advanced prog 1/ex5/src/server/: CMakeLists.txt  Command.h  JoinGame.h  ListGames.cpp
biu/Year3/Project/: UserInterface.py  data.csv  export2.sql  holidays.csv  offices.txt  prediction.csv
biu/networks/ex1/: Server.py
interviews/code value/: package.json
interviews/code value/htmls/: 1.html
interviews/code value/src/: crawler.ts
interviews/python/: main.py
interviews/python template/: main.py
interviews/typescript template/: app.ts  package.json
interviews/valance/: app.ts  package.json
old code from university/C# FileSaver (Y2)/Excersie1/: ReadME!.txt
old code from university/CPP Reversie(Y2)/ass3/: main.cpp
old code from university/Project/: generate_data.py  get_data.py
practice and tests/code value/: package-lock.json
practice and tests/code value/src/: crawlTask.ts
typescript project/: app.test.ts  app.ts  package.json  tsconfig.json
typescript project/src/config/: config.ts
typescript project/src/types/: address.ts  index.ts  (+1 more)
(+387 files in other folders)
